tests/compile_fail/borrow_mut/enum.rs
#[derive(derive_more::BorrowMut)]
enum Foo {
    Bar(i32),
}

fn main() {}
