tests/compile_fail/borrow_mut/enum.stderr
error: `BorrowMut` cannot be derived for enums
 --> tests/compile_fail/borrow_mut/enum.rs:2:1
  |
2 | enum Foo {
  | ^^^^
